--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "feb8660d-1c85-4bbd-9dd3-8a7542681c83"
 authors = ["Michael Bennett"]
 version = "0.1.0"
 
+[deps]
+NumericalMethods = "fd3c36b2-d619-4b64-906f-73477278ed8e"
+
 [compat]
 julia = "1"
 
